--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -11,9 +11,9 @@
         <h1>About Us</h1>
         <nav>
             <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-                <li><a href="{{ url_for('contact') }}">Contact</a></li>
+                <li><a href="{{ url_for('app_routes.index') }}">Home</a></li>
+                <li><a href="{{ url_for('app_routes.about') }}">About</a></li>
+                <li><a href="{{ url_for('app_routes.contact') }}">Contact</a></li>
             </ul>
         </nav>
     </header>
